# pathfinding

./: AGENTS.MD  CLAUDE.md  Cargo.toml  FUTUREFEATURES.md  README.md  TODO.md  height_contour_map.md
.claude/: settings.json
assets/: level.ron  sprite_manifest.ron
crates/app/: Cargo.toml
crates/app/src/: main.rs  warehouse_link.rs
crates/camera_main/: Cargo.toml
crates/camera_main/src/: constants.rs  lib.rs  plugin.rs  systems.rs
crates/collision/: Cargo.toml
crates/collision/src/: aabb.rs  broad_phase.rs  components.rs  constants.rs  events.rs  grid.rs  hull.rs  lib.rs  manifold.rs  narrow_phase.rs  plugin.rs  response.rs  sat.rs  shape.rs  solver.rs  spatial_hash.rs  static_index.rs  world.rs
crates/collision_rapier/: Cargo.toml
crates/collision_rapier/src/: constants.rs  events.rs  lib.rs  mapping.rs  physics.rs  plugin.rs  solver.rs  step.rs  sync.rs
crates/hitboxes/: Cargo.toml
crates/hitboxes/src/: constants.rs  lib.rs  shape.rs
crates/hitboxes_rapier/: Cargo.toml
crates/hitboxes_rapier/src/: components.rs  convert.rs  lib.rs  shape.rs
crates/hud/: Cargo.toml
crates/hud/src/: components.rs  constants.rs  format.rs  lib.rs  plugin.rs  systems.rs
crates/level/: Cargo.toml
crates/level/src/: constants.rs  lib.rs  objects.rs  plugin.rs  spawn.rs  terrain.rs
crates/level/src/objects/: constants.rs  loader.rs  manifest.rs  player.rs  spec.rs  storage.rs
crates/level/tests/: spawn_level.rs
crates/logistics/: Cargo.toml  UNORDERED_INVENTORY_MUTATORS.md
crates/logistics/src/: bundle.rs  commodity.rs  components.rs  constants.rs  debug.rs  lib.rs  message.rs  plugin.rs  systems.rs
crates/logistics/src/cargo_handling/: components.rs  message.rs  mod.rs  systems.rs
crates/motion/: Cargo.toml
crates/motion/src/: components.rs  plugin.rs  systems.rs
crates/obstacle/: Cargo.toml
crates/obstacle/src/: components.rs  constants.rs  lib.rs  shape.rs
crates/obstacles/: Cargo.toml
crates/obstacles/src/: bundle.rs  components.rs  constants.rs  lib.rs  plugin.rs  spawn.rs
crates/player/: Cargo.toml
crates/player/src/: bundle.rs  components.rs  constants.rs  lib.rs  plugin.rs  systems.rs
crates/rail/: Cargo.toml
crates/rail/src/: bundle.rs  components.rs  constants.rs  lib.rs  plugin.rs  smooth.rs  systems.rs  track.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs  plugin.rs
crates/render/src/elevation/: components.rs  mod.rs  plugin.rs
crates/render/src/elevation/contour/: cache.rs  constants.rs  levels.rs  mesh.rs  mod.rs  render.rs  style.rs
crates/render/src/logistics/: constants.rs  mod.rs  plugin.rs
crates/render/src/obstacle/: constants.rs  mesh.rs  mod.rs  plugin.rs
crates/render/src/player/: constants.rs  plugin.rs
crates/render/src/rail/: constants.rs  mesh.rs  plugin.rs
crates/render/src/selection/: components.rs  constants.rs  mod.rs  plugin.rs
crates/render/src/sprite/: plugin.rs
crates/render/src/wall/: constants.rs  plugin.rs
crates/routing/: Cargo.toml
crates/routing/src/: astar.rs  constants.rs  grid.rs  lib.rs  profile.rs  sampler.rs  simplify.rs
crates/routing/tests/: find_path.rs
crates/selection/: Cargo.toml
crates/selection/src/: components.rs  constants.rs  plugin.rs  systems.rs
crates/spritebake/: Cargo.toml
crates/spritebake/src/: bake.rs  constants.rs  hull.rs  main.rs  manifest.rs
crates/sprites/: Cargo.toml
crates/sprites/src/: catalog.rs  components.rs  constants.rs  lib.rs  loader.rs  manifest.rs  plugin.rs  scale.rs
crates/world/: Cargo.toml
crates/world/src/: bundle.rs  components.rs  constants.rs  lib.rs  plugin.rs  wall.rs
crates/world/src/elevation/: chunk_coord.rs  chunk_events.rs  chunk_lifecycle.rs  chunk_view.rs  components.rs  config.rs  constants.rs  height_field.rs  height_fn.rs  loaded_chunks.rs  mod.rs  plugin.rs  sampler.rs
crates/world/src/elevation/contour/: data.rs  extract.rs  marching.rs  mod.rs
crates/world/src/elevation/generation/: feature.rs  mod.rs  placement.rs
crates/world/src/elevation/noise/: fbm.rs  hash.rs  mod.rs  value_noise.rs
crates/world/src/terrain_effects/: constants.rs  mod.rs  slope_speed.rs
plans/: p10_obstacles_basic.md  p10_obstacles_collision.md  p11_collision_solver_fixedupdate.md  p12_collision_cleanup.md  p13_collision_review_findings.md  p14_hitboxes_collision_split.md  p15_collision_rapier.md  p16_central_object_placement.md  p17_fold_walls_into_obstacles.md  p18_terrain_config_to_level.md  p19_obstacle_general_object_crate.md  p20_infrastructure_storage.md  p21_logistics_generalization.md  p22_logistics_cleanup.md  p23_capacity_and_carrier.md  p24_selection_mechanism.md  p25_sprite_hitbox_pipeline.md  p26_world_object_constructors.md  p27_level_as_data_ron.md  p28_terrain_into_level_asset.md  p29_capacity_seed_clamp.md  p2_elevation_extra_notes.md  p2_elevation_restructure.md  p30_rail_locomotive.md  p31_routing_pathfinding.md  p3_workspace_split.md  p4_camera_main.md  p4_motion_crate.md  p4_motion_hardening.md  p4_motion_refactor.md  p5_terrain_map.md  p6_terrain_scale.md  p7_camera_spaghetti.md  p8_fix_minor_issues.md  p9_convex_hull_validation.md  p9_sat_collision.md
src/: constants.rs  main.rs
src/collision/: components.rs  events.rs  mod.rs  narrow_phase.rs  plugin.rs  response.rs  spatial_hash.rs
src/hud/: plugin.rs  systems.rs
src/player/: plugin.rs  systems.rs
src/world/: mod.rs  plugin.rs  systems.rs
src/world/elevation/: chunk_coord.rs  components.rs  contour_data.rs  contour_extract.rs  contour_levels.rs  contour_mesh.rs  height_fn.rs  mesh_build.rs  mod.rs  plugin.rs  slope.rs  streaming.rs
src/world/terrain_effects/: mod.rs  slope_speed.rs
