[workspace]
resolver = "3"
members = [
    "crates/app",
    "crates/camera_main",
    "crates/collision",
    "crates/world",
    "crates/player",
    "crates/hud",
    "crates/render",
    "crates/motion",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "default_app",
    "2d_bevy_render",
    "bevy_ui",
    "bevy_ui_render",
    "std",
    "bevy_gilrs",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "webgl2",
    "x11",
    "sysinfo_plugin",
] }

camera_main = { path = "crates/camera_main" }
collision = { path = "crates/collision" }
world = { path = "crates/world" }
player = { path = "crates/player" }
hud = { path = "crates/hud" }
render = { path = "crates/render" }
motion = { path = "crates/motion" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
