[workspace]
resolver = "3"
members = [
    "crates/app",
    "crates/camera_main",
    "crates/collision_rapier",
    "crates/hitboxes_rapier",
    "crates/world",
    "crates/obstacles",
    "crates/player",
    "crates/hud",
    "crates/render",
    "crates/motion",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "default_app",
    "2d_bevy_render",
    "bevy_ui",
    "bevy_ui_render",
    "std",
    "bevy_gilrs",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "webgl2",
    "x11",
    "sysinfo_plugin",
] }
smallvec = { version = "1" }
rapier2d = { version = "0.33" }
parry2d = { version = "0.28" }

camera_main = { path = "crates/camera_main" }
collision_rapier = { path = "crates/collision_rapier" }
hitboxes_rapier = { path = "crates/hitboxes_rapier" }
world = { path = "crates/world" }
obstacles = { path = "crates/obstacles" }
player = { path = "crates/player" }
hud = { path = "crates/hud" }
render = { path = "crates/render" }
motion = { path = "crates/motion" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
