[workspace]
resolver = "3"
members = [
    "crates/app",
    "crates/camera_main",
    "crates/collision_rapier",
    "crates/hitboxes_rapier",
    "crates/level",
    "crates/world",
    "crates/logistics",
    "crates/obstacle",
    "crates/player",
    "crates/selection",
    "crates/hud",
    "crates/render",
    "crates/motion",
    "crates/sprites",
    "crates/spritebake",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "default_app",
    "2d_bevy_render",
    "bevy_ui",
    "bevy_ui_render",
    "std",
    "bevy_gilrs",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "webgl2",
    "x11",
    "sysinfo_plugin",
    "png",
] }
smallvec = { version = "1" }
rapier2d = { version = "0.33" }
parry2d = { version = "0.28" }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
ron = { version = "0.8" }

camera_main = { path = "crates/camera_main" }
collision_rapier = { path = "crates/collision_rapier" }
hitboxes_rapier = { path = "crates/hitboxes_rapier" }
level = { path = "crates/level" }
world = { path = "crates/world" }
logistics = { path = "crates/logistics" }
obstacle = { path = "crates/obstacle" }
player = { path = "crates/player" }
selection = { path = "crates/selection" }
hud = { path = "crates/hud" }
render = { path = "crates/render" }
motion = { path = "crates/motion" }
sprites = { path = "crates/sprites" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
