[package]
name = "pathfinding"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pathfinding"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
camera_main = { workspace = true }
collision = { workspace = true }
world = { workspace = true }
obstacles = { workspace = true }
player = { workspace = true }
hud = { workspace = true }
render = { workspace = true }
motion = { workspace = true }
