[package]
name = "pathfinding"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pathfinding"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
camera_main = { workspace = true }
collision_rapier = { workspace = true }
world = { workspace = true }
logistics = { workspace = true }
level = { workspace = true }
rail = { workspace = true }
selection = { workspace = true }
hud = { workspace = true }
render = { workspace = true }
motion = { workspace = true }
sprites = { workspace = true }
