[package]
name = "level"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
hitboxes_rapier = { workspace = true }
logistics = { workspace = true }
obstacle = { workspace = true }
world = { workspace = true }
player = { workspace = true }
selection = { workspace = true }
motion = { workspace = true }
sprites = { workspace = true }
